[gd_scene load_steps=7 format=2]

[ext_resource path="res://intro/intro.gd" type="Script" id=1]
[ext_resource path="res://intro/cartinhas.png" type="Texture" id=2]
[ext_resource path="res://intro/Letter.gd" type="Script" id=3]
[ext_resource path="res://hud/fonts/MunroExtended/MunroExtended.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://objects/props/door/door.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Intro" type="Node" index="0"]

script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 644.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="Letter" type="TextureRect" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.944745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Tween" type="Tween" parent="Letter" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Nanas-text" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 83.0
margin_top = 145.0
margin_right = 467.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.585938, 0.258636, 0.408056, 1 )
bbcode_enabled = true
bbcode_text = "\"Dear grandson,
    
I'm so sorry you've been evicted. And I heard you are also out of work? Oh my sweet pumpkin, don't you worry! 
           
You can come to my house and stay as long as you'd like. I'll make a delicious lasagna just for you.
						Hugs and kisses,	
							Nana\"

"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 10
text = "\"Dear grandson,
    
I'm so sorry you've been evicted. And I heard you are also out of work? Oh my sweet pumpkin, don't you worry! 
           
You can come to my house and stay as long as you'd like. I'll make a delicious lasagna just for you.
						Hugs and kisses,	
							Nana\"

"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="SFX" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SFX2" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Begin-Game" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="block" type="ColorRect" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 644.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )

[node name="fadeout" type="Tween" parent="." index="9"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="Timer" to="." method="start_text"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]

[connection signal="timeout" from="Begin-Game" to="." method="_begin_game"]

[connection signal="tween_completed" from="fadeout" to="." method="_on_fadeout_tween_completed"]


